# fluxcd-teams-webhook

./: .mypy.ini  Dockerfile  LICENSE  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml
fluxcd_teams_bot/: bot.py  bot_adapter.py  cards.py  parser.py  server.py  settings.py
fluxcd_teams_bot/card_templates/: autorelease.json  sync_error.json
fluxcd_teams_bot/conversation_store/: base.py  file.py
